cambio nombre de botón VerCampeones

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <img id="logoLol" src="imagenes/lol logo.png" >
        <!-- El texto league of legends dorado -->
 
-        <section class="downloadGame"> 
+        <section class="goToChamps"> 
         <a id="championsDownload">ENCUENTRA A TU CAMPEÓN</a>
         </section>
       </section>
